# Game_Design

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  ci_build.sh  vcpkg.json  下一轮迭代方案.md  游戏规则与玩法介绍.md
.github/: README.md
.github/workflows/: ci.yml
code/: CMakeLists.txt  main.cpp
code/app/: AppSmokeTest.cpp  CMakeLists.txt  GameApplication.cpp  GameApplication.h  README.md  ViewAdapter.cpp  ViewAdapter.h
code/common/: README.md  actions.h  actor.h  common.h  contracts.h  game_state.h  game_status.h  level.h  notification.h  snapshot.h  types.h
code/tests/: AppTest.cpp  CMakeLists.txt  README.md  ViewModelTest.cpp  ViewTest.cpp
code/view/: AssetCatalog.cpp  AssetCatalog.h  CMakeLists.txt  GameWidget.cpp  GameWidget.h  InputDefs.h  MainWindow.cpp  MainWindow.h  PresentationState.cpp  PresentationState.h  README.md  SoundManager.cpp  SoundManager.h  ViewAdapter.cpp  ViewAdapter.h  ViewSmokeTest.cpp
code/view/Assets/: README.md
code/viewmodel/: CMakeLists.txt  GameSimulation.cpp  GameSimulation.h  GameSimulationTest.cpp  GameViewModel.cpp  GameViewModel.h  GameViewModelSmokeTest.cpp  README.md  SimulationTypes.h
report/: .gitignore  README.md  build_report.sh
report/Markdown/: 00_project_overview.md  01_architecture.md  02_app_common_layer.md  03_view_layer.md  04_viewmodel_layer.md  05_build_and_summary.md  05_personal_reflections.md  06_build_and_summary.md  06_personal_reflections.md
report/latex/: report_filter.lua  report_header.tex  titlepage.tex
report/output/: report.tex
report_end/: README
report_end/figures/: report.aux  report.tex  report.toc
