cmake_minimum_required(VERSION 3.20)

add_library(alleyfist_view STATIC
    AssetCatalog.cpp
    MainWindow.cpp
    GameWidget.cpp
    PresentationState.cpp
    SoundManager.cpp
)

set(ALLEYFIST_ART_DIR "${CMAKE_CURRENT_SOURCE_DIR}/Assets")
qt_add_resources(alleyfist_view "alleyfist_art"
    PREFIX "/art"
    BASE "${ALLEYFIST_ART_DIR}"
    FILES
        "${ALLEYFIST_ART_DIR}/Sprites/shadow.png"
        "${ALLEYFIST_ART_DIR}/Spritesheets/Brawler Girl/idle.png"
        "${ALLEYFIST_ART_DIR}/Spritesheets/Brawler Girl/walk.png"
        "${ALLEYFIST_ART_DIR}/Spritesheets/Brawler Girl/jab.png"
        "${ALLEYFIST_ART_DIR}/Spritesheets/Brawler Girl/kick.png"
        "${ALLEYFIST_ART_DIR}/Spritesheets/Brawler Girl/jump.png"
        "${ALLEYFIST_ART_DIR}/Spritesheets/Brawler Girl/jump_kick.png"
        "${ALLEYFIST_ART_DIR}/Spritesheets/Brawler Girl/hurt.png"
        "${ALLEYFIST_ART_DIR}/Spritesheets/Enemy Punk/idle.png"
        "${ALLEYFIST_ART_DIR}/Spritesheets/Enemy Punk/walk.png"
        "${ALLEYFIST_ART_DIR}/Spritesheets/Enemy Punk/punch.png"
        "${ALLEYFIST_ART_DIR}/Spritesheets/Enemy Punk/hurt.png"
        "${ALLEYFIST_ART_DIR}/Spritesheets/Enemy Punk/death.png"
        "${ALLEYFIST_ART_DIR}/伏击型飞行敌人/Idle.png"
        "${ALLEYFIST_ART_DIR}/伏击型飞行敌人/Walk.png"
        "${ALLEYFIST_ART_DIR}/伏击型飞行敌人/Attack.png"
        "${ALLEYFIST_ART_DIR}/伏击型飞行敌人/Hurt.png"
        "${ALLEYFIST_ART_DIR}/伏击型飞行敌人/Death.png"
        "${ALLEYFIST_ART_DIR}/冲撞型敌人/Idle.png"
        "${ALLEYFIST_ART_DIR}/冲撞型敌人/Walk.png"
        "${ALLEYFIST_ART_DIR}/冲撞型敌人/Attack.png"
        "${ALLEYFIST_ART_DIR}/冲撞型敌人/Hurt.png"
        "${ALLEYFIST_ART_DIR}/冲撞型敌人/Death.png"
        "${ALLEYFIST_ART_DIR}/远程型敌人/Idle.png"
        "${ALLEYFIST_ART_DIR}/远程型敌人/Walk.png"
        "${ALLEYFIST_ART_DIR}/远程型敌人/Attack.png"
        "${ALLEYFIST_ART_DIR}/远程型敌人/Hurt.png"
        "${ALLEYFIST_ART_DIR}/远程型敌人/Death.png"
        "${ALLEYFIST_ART_DIR}/远程型敌人2（机器人）/Idle.png"
        "${ALLEYFIST_ART_DIR}/远程型敌人2（机器人）/Walk.png"
        "${ALLEYFIST_ART_DIR}/远程型敌人2（机器人）/Attack.png"
        "${ALLEYFIST_ART_DIR}/远程型敌人2（机器人）/Hurt.png"
        "${ALLEYFIST_ART_DIR}/远程型敌人2（机器人）/Death.png"
        "${ALLEYFIST_ART_DIR}/远程型敌人2（机器人）/Ball1.png"
        "${ALLEYFIST_ART_DIR}/远程型敌人2（机器人）/Ball2.png"
        "${ALLEYFIST_ART_DIR}/Boss/Idle.png"
        "${ALLEYFIST_ART_DIR}/Boss/Walk.png"
        "${ALLEYFIST_ART_DIR}/Boss/Attack1.png"
        "${ALLEYFIST_ART_DIR}/Boss/Attack2.png"
        "${ALLEYFIST_ART_DIR}/Boss/Attack3.png"
        "${ALLEYFIST_ART_DIR}/Boss/Attack4.png"
        "${ALLEYFIST_ART_DIR}/Boss/Sneer.png"
        "${ALLEYFIST_ART_DIR}/Boss/Hurt.png"
        "${ALLEYFIST_ART_DIR}/Boss/Death.png"
        "${ALLEYFIST_ART_DIR}/HUD/HealthBar1.png"
        "${ALLEYFIST_ART_DIR}/HUD/HealthBar2.png"
        "${ALLEYFIST_ART_DIR}/HUD/HealthBar3.png"
        "${ALLEYFIST_ART_DIR}/HUD/HealthBar4.png"
        "${ALLEYFIST_ART_DIR}/HUD/HealthBar5.png"
        "${ALLEYFIST_ART_DIR}/HUD/HealthBar6.png"
        "${ALLEYFIST_ART_DIR}/HUD/HealthBar7.png"
        "${ALLEYFIST_ART_DIR}/HUD/HealthBar8.png"
        "${ALLEYFIST_ART_DIR}/HUD/EnergyBar1.png"
        "${ALLEYFIST_ART_DIR}/HUD/EnergyBar2.png"
        "${ALLEYFIST_ART_DIR}/HUD/EnergyBar3.png"
        "${ALLEYFIST_ART_DIR}/HUD/EnergyBar4.png"
        "${ALLEYFIST_ART_DIR}/HUD/EnergyBar5.png"
        "${ALLEYFIST_ART_DIR}/HUD/EnergyBar6.png"
        "${ALLEYFIST_ART_DIR}/HUD/EnergyBar7.png"
        "${ALLEYFIST_ART_DIR}/HUD/EnergyBar8.png"
        "${ALLEYFIST_ART_DIR}/HUD/Scrolling1.png"
        "${ALLEYFIST_ART_DIR}/HUD/Scrolling2.png"
        "${ALLEYFIST_ART_DIR}/HUD/Scrolling3.png"
        "${ALLEYFIST_ART_DIR}/HUD/Scrolling4.png"
        "${ALLEYFIST_ART_DIR}/界面图/1 Frames/Frame_01.png"
        "${ALLEYFIST_ART_DIR}/界面图/1 Frames/Frame_02.png"
        "${ALLEYFIST_ART_DIR}/界面图/1 Frames/Frame_03.png"
        "${ALLEYFIST_ART_DIR}/界面图/1 Frames/Frame_10.png"
        "${ALLEYFIST_ART_DIR}/界面图/1 Frames/Frame_11.png"
        "${ALLEYFIST_ART_DIR}/界面图/1 Frames/Frame_12.png"
        "${ALLEYFIST_ART_DIR}/界面图/1 Frames/Frame_19.png"
        "${ALLEYFIST_ART_DIR}/界面图/1 Frames/Frame_20.png"
        "${ALLEYFIST_ART_DIR}/界面图/1 Frames/Frame_21.png"
        "${ALLEYFIST_ART_DIR}/界面图/5 Logo/Logo1.png"
        "${ALLEYFIST_ART_DIR}/界面图/5 Logo/Logo2.png"
        "${ALLEYFIST_ART_DIR}/界面图/5 Logo/Logo3.png"
        "${ALLEYFIST_ART_DIR}/界面图/6 Buttons/1/1_01.png"
        "${ALLEYFIST_ART_DIR}/界面图/6 Buttons/1/1_02.png"
        "${ALLEYFIST_ART_DIR}/界面图/6 Buttons/1/1_03.png"
        "${ALLEYFIST_ART_DIR}/界面图/6 Buttons/1/1_05.png"
        "${ALLEYFIST_ART_DIR}/界面图/6 Buttons/1/1_06.png"
        "${ALLEYFIST_ART_DIR}/界面图/6 Buttons/1/1_07.png"
        "${ALLEYFIST_ART_DIR}/界面图/6 Buttons/2/2_01.png"
        "${ALLEYFIST_ART_DIR}/界面图/6 Buttons/2/2_02.png"
        "${ALLEYFIST_ART_DIR}/界面图/6 Buttons/2/2_03.png"
        "${ALLEYFIST_ART_DIR}/界面图/6 Buttons/2/2_05.png"
        "${ALLEYFIST_ART_DIR}/界面图/6 Buttons/2/2_06.png"
        "${ALLEYFIST_ART_DIR}/界面图/6 Buttons/2/2_07.png"
        "${ALLEYFIST_ART_DIR}/界面图/6 Buttons/7/7_01.png"
        "${ALLEYFIST_ART_DIR}/界面图/6 Buttons/7/7_02.png"
        "${ALLEYFIST_ART_DIR}/界面图/6 Buttons/7/7_03.png"
        "${ALLEYFIST_ART_DIR}/界面图/6 Buttons/7/7_05.png"
        "${ALLEYFIST_ART_DIR}/界面图/6 Buttons/7/7_06.png"
        "${ALLEYFIST_ART_DIR}/界面图/6 Buttons/7/7_07.png"
        "${ALLEYFIST_ART_DIR}/界面图/9 Other/3 Skill icons/Skillicon7_20.png"
        "${ALLEYFIST_ART_DIR}/界面图/9 Other/3 Skill icons/Skillicon7_05.png"
        "${ALLEYFIST_ART_DIR}/界面图/9 Other/3 Skill icons/Skillicon7_10.png"
        "${ALLEYFIST_ART_DIR}/界面图/9 Other/3 Skill icons/Skillicon7_02.png"
        "${ALLEYFIST_ART_DIR}/界面图/9 Other/3 Skill icons/Skillicon7_19.png"
        "${ALLEYFIST_ART_DIR}/界面图/9 Other/3 Skill icons/Skillicon7_17.png"
        "${ALLEYFIST_ART_DIR}/界面图/10 Font/CyberpunkCraftpixPixel.otf"
        "${ALLEYFIST_ART_DIR}/Stage Layers/tileset.png"
        "${ALLEYFIST_ART_DIR}/Stage Layers/back.png"
        "${ALLEYFIST_ART_DIR}/Stage Layers/fore.png"
        "${ALLEYFIST_ART_DIR}/Stage Layers/props/car.png"
        "${ALLEYFIST_ART_DIR}/Stage Layers/props/barrel.png"
        "${ALLEYFIST_ART_DIR}/Stage Layers/props/hydrant.png"
)

target_include_directories(alleyfist_view PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})

target_link_libraries(alleyfist_view
    PUBLIC
        alleyfist_common
        Qt6::Widgets
        Qt6::Gui
)

if(WIN32)
    target_link_libraries(alleyfist_view PRIVATE winmm)
endif()
